Fixed mobile menu squished when big logos
Fixes https://github.com/maithemewp/mai-theme-engine/issues/163

--- a/assets/css/mai-theme.css
+++ b/assets/css/mai-theme.css
@@ -2521,6 +2521,10 @@ body:not(.mai-sections) .breadcrumb ~ .content-sidebar-wrap {
 /* ### Menu Toggle
 --------------------------------------------- */
 
+.mai-toggle {
+	-webkit-box-flex: 1;-ms-flex: 1 0 auto;flex: 1 0 auto;
+}
+
 .mai-toggle,
 .sub-menu-toggle {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
